2005-12-04 13:02 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: called gridCacheCurrentGridAndMap
	to interpolate metric from original grid.
	* src/gridmetric.c (gridAR) if grid->map is NULL don't use map
	pointers, call gridMap to do interploation.
	* src/grid.c (gridCacheCurrentGridAndMap) to correct child_reference
	array that was not malloc'ed large enough and use a more
	robust iteration of nodes to populate child_reference
	* src/grid.c (gridInterpolateMap2) set child_reference instead
	of map is map is NULL.
	* src/grid.c (gridAddNodeWithGlobal) only initialize map to
	identity if it is not NULL.

2005-12-04 12:30 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMap) spiked in logic to interpolate metric from
	child grid, this needs to be tested.

2005-12-03 23:35 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindEnclosingCell) added tests to find
	and correct the error handling of invalid cell.

2005-12-03 21:00 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridBarycentricCoordinate) added tests to find
	and correct bugs.

2005-12-03 16:19 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFindEnclosingCell) also returns bary.
	* src/grid.c (gridBarycentricCoordinate) new method to find
	the barycnetric coordinate, based on a position. (note
	that this method needs to be tested and could use better
	numerics to solve for bary).

2005-12-02  9:40 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFindEnclosingCell) removed, 
	moved to src/grid.c.
	* src/grid.c (gridFindEnclosingCell) added, taken form
	src/gridinsert.c, to utilize the `least astonishment'
	principle, starting_guess now refers to a cell instead
	of a node.
	src/grid.c now requires src/gridmath.h, changing thier
	relative dependency.

2005-12-02  8:41 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridMap,gridSetMap) Started to implement logic that
	will ignore grid->map id NULL and interpolate metric in child